<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_app"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmailSignIn"
        android:layout_width="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="noExcludeDescendants"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordSignIn"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPasswordSignIn"
            android:importantForAutofill="noExcludeDescendants"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/sign_in"
        android:id="@+id/btnSignIn"
        android:background="@drawable/btn_round"
        android:textColor="@color/white"
        android:layout_marginBottom="70dp"
        android:textSize="17sp"
        android:textAllCaps="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/purple_500"
            android:id="@+id/txtSignUp"
            android:layout_marginEnd="6dp"/>


    </LinearLayout>

</LinearLayout>