<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_app"
        android:textSize="32sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutEmailSignUp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEmailSignUp"
            android:importantForAutofill="noExcludeDescendants"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutNameSignUp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="noExcludeDescendants"
            android:id="@+id/txtNameSignUp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutAddressSignUp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAddressSignUp"
            android:importantForAutofill="noExcludeDescendants"
            android:hint="@string/address"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutPasswordSignUp"
        android:layout_marginBottom="6dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPasswordSignUp"
            android:importantForAutofill="noExcludeDescendants"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/txtLayoutConfrimSignUp"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtConfirmSignUp"
            android:importantForAutofill="noExcludeDescendants"
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_round"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/purple_500"
            android:id="@+id/txtSignIn"
            android:layout_marginEnd="6dp"/>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



